sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var beg:Int=0;
  var end:int=getValueCOunt()-2;
  var sp=false;
  do {
    sp=false
    for (i <- beg to end) {
      if (!isSmaller(i,i+1)) {
        swap(i,i+1)
        sp=true
      }
    }
    end-=1
    for (i <- beg to end) {
      if (!isSmaller(end-1-i,end-i)) {
        swap(end-1-i,end-i)
        sp=true
      }
    }
    beg+=1
  } while (sp==true)
}